testdata/kustomize/base/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: shop-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "shop.example.com"
