testdata/kustomize/base/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
  - gateway.yaml
  - virtualservice.yaml
  - services.yaml
  - workloads.yaml
