testdata/kustomize/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: api
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: web
